--- a/force-app/main/tests/classes/Test_VisitResultsRemote.cls
+++ b/force-app/main/tests/classes/Test_VisitResultsRemote.cls
@@ -3,8 +3,6 @@
  */
 @IsTest
 public with sharing class Test_VisitResultsRemote {
-    //TODO fix tests!!!
-/*
     @TestSetup
     static void setup() {
         TriggerHandlerExecutor.bypassHandler(StudySiteTriggerHandler.CreateStatusHistoryHandler.class);
@@ -59,18 +57,18 @@ public with sharing class Test_VisitResultsRemote {
         };
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(CTPSelector.class, StubFactory.newInstance(CTPSelector.class)
+        ClassFactory.putStubTypeByClassName(CTPSelector.class, StubBuilder.newInstance(CTPSelector.class)
                 .when('getCtpById')
                 .then(ctp)
                 .when('getVisitsByCtpId')
                 .then(visits2)
-                .getInstance()
+                .build()
         );
         TestData.loadTestData();
 
         Test.startTest();
         TestData testData = new TestData();
-        testData.createPSE();
+        testData.updatePEStatusEnrollmentSuccess();
         System.runAs(testData.participantUser) {
             VisitResultsRemote.InitDataWrapper wrapper = VisitResultsRemote.getInitData('');
             System.assert(wrapper != null);
@@ -86,10 +84,10 @@ public with sharing class Test_VisitResultsRemote {
         };
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultsGroupNames')
                 .then(visitResultGroupNames)
-                .getInstance()
+                .build()
         );
 
         Test.startTest();
@@ -105,10 +103,10 @@ public with sharing class Test_VisitResultsRemote {
         VisitResultsService.VisitResultsContainer container = new VisitResultsService.VisitResultsContainer(patientVisit, null, 'Vitals');
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultsContainer')
                 .then(container)
-                .getInstance()
+                .build()
         );
 
         Test.startTest();
@@ -126,10 +124,10 @@ public with sharing class Test_VisitResultsRemote {
         };
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultWrappersForDashboard')
                 .then(wrappers)
-                .getInstance()
+                .build()
         );
 
         Test.startTest();
@@ -146,7 +144,7 @@ public with sharing class Test_VisitResultsRemote {
 
         Test.startTest();
         TestData testData = new TestData();
-        testData.createPSE();
+        testData.updatePEStatusEnrollmentSuccess();
         testData.participant.Contact__c = null;
         update testData.participant;
         try {
@@ -165,10 +163,10 @@ public with sharing class Test_VisitResultsRemote {
     static void getVisitResultsGroupNamesWithException_test() {
         Boolean isExceptionThrown = false;
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultsGroupNames')
                 .then(new AuraHandledException('exception'))
-                .getInstance()
+                .build()
         );
         Test.startTest();
         try {
@@ -186,10 +184,10 @@ public with sharing class Test_VisitResultsRemote {
     static void getVisitResultsContainerWithException_test() {
         Boolean isExceptionThrown = false;
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultsContainer')
                 .then(new AuraHandledException('exception'))
-                .getInstance()
+                .build()
         );
         Test.startTest();
         try {
@@ -207,10 +205,10 @@ public with sharing class Test_VisitResultsRemote {
     static void getVisitResultWrappersForDashboardWithException_test() {
         Boolean isExceptionThrown = false;
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubFactory.newInstance(VisitResultsService.class)
+        ClassFactory.putStubTypeByClassName(VisitResultsService.class, StubBuilder.newInstance(VisitResultsService.class)
                 .when('getVisitResultWrappersForDashboard')
                 .then(new AuraHandledException('exception'))
-                .getInstance()
+                .build()
         );
         Test.startTest();
         try {
@@ -230,17 +228,17 @@ public with sharing class Test_VisitResultsRemote {
         Contact contact = (Contact) TestDataFactory.getSObject(Contact.getSObjectType());
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(DatabaseProxy.class, StubFactory.newInstance(DatabaseProxy.class)
+        ClassFactory.putStubTypeByClassName(DatabaseProxy.class, StubBuilder.newInstance(DatabaseProxy.class)
                 .when('updateRecord')
                 .then(null)
-                .getInstance()
+                .build()
         );
 
         TestData.loadTestData();
 
         Test.startTest();
         TestData testData = new TestData();
-        testData.createPSE();
+        testData.updatePEStatusEnrollmentSuccess();
         testData.participant.Contact__c = contact.Id;
         update testData.participant;
         System.runAs(testData.participantUser) {
@@ -256,10 +254,10 @@ public with sharing class Test_VisitResultsRemote {
         Contact contact = (Contact) TestDataFactory.getSObject(Contact.getSObjectType());
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(DatabaseProxy.class, StubFactory.newInstance(DatabaseProxy.class)
+        ClassFactory.putStubTypeByClassName(DatabaseProxy.class, StubBuilder.newInstance(DatabaseProxy.class)
                 .when('updateRecord')
                 .then(new AuraHandledException('error'))
-                .getInstance()
+                .build()
         );
         TestData.loadTestData();
 
@@ -278,5 +276,4 @@ public with sharing class Test_VisitResultsRemote {
         }
         Test.stopTest();
     }
-    */
 }
